# RAG-notebooks

./: .gitignore  pyproject.toml
notebooks/CodeReview/: index.ipynb
notebooks/NaiveRAG/: index.ipynb
notebooks/NaiveRAG/text_index/: chroma.sqlite3
notebooks/ParentDocumentRetrieverRAG/: index.ipynb
notebooks/ParentDocumentRetrieverRAG/childVectorDB/: chroma.sqlite3
notebooks/ParentRAG/: index.ipynb
notebooks/RerankRAG/: index.ipynb
notebooks/RerankRAG/naiveDB/: chroma.sqlite3
notebooks/SolucaoRAG/: index.ipynb
