[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["Felipe Jung <felipemattoseu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
notebook = "^7.2.2"
jupyter = "^1.1.1"
langchain = "^0.2.15"
langchain-openai = "^0.1.23"
langchain-community = "^0.2.14"
pypdf = "^4.3.1"
langchain-chroma = "^0.1.3"
langchain-core = "^0.2.37"
python-git = "^2018.2.1"
gitpython = "^3.1.43"
python-dotenv = "^1.0.1"
langchain-cohere = "^0.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
